[package]
name = "blockchain-tools"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = "0.4.0"
tiny-bip39 = "1.0.0"
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4.3"
derivation-path = "0.2.0"
sha3 = "0.10.6"
